--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	font-size: 16px; 
+	font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
@@ -13,15 +14,30 @@ h1 {
 }
 
 .message {
-	background: #eee;
 	display: block;
-	height: 2em;
-	margin-bottom: 1em;
-	padding: 0.7em;
+	height: 8em;
+	margin-bottom: 0.7em;
+  	border: 1px solid #d6d6d6;
+}
+
+.message-body {
+	height: 5.6em;
+	padding: 0.5em;
+}
+
+.votes {
+	display: block;
+	font-size: 0.9em;
+	text-align: right;
+	padding: 0.2em 0.5em;
+	background: #eee;
 }
 
 a {
-	cursor: pointer;
 	text-decoration: none;
+	cursor: pointer;
+}
+
+.message-body a {
 	float: right;
 }
