--- a/style.css
+++ b/style.css
@@ -41,3 +41,35 @@ a {
 .message-body a {
 	float: right;
 }
+
+
+body{
+    position: relative;
+}
+
+.message{
+    perspective: 500;
+    -webkit-perspective: 500;
+    -moz-perspective: 500;
+    -ms-perspective: 500;
+    -o-perspective: 500;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    cursor: pointer;
+
+    -webkit-transition: 0.8s;
+    -moz-transition: 0.8s;
+    -ms-transition: 0.8s;
+    -o-transition: 0.8s;
+    transition: 0.8s;
+}
+
+.flip {
+  transform: rotateY(180deg) scale(1.2,1.2);
+  -webkit-transform: rotateY(180deg) scale(1.2,1.2);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+}
