--- a/style.css
+++ b/style.css
@@ -42,9 +42,23 @@ a {
 	float: right;
 }
 
+.editing {
+	transform: rotateY(-180deg) scale (1,1);
+	-webkit-transform: rotateY(-180deg) scale(1,1);
+	-moz-transform: rotateY(-180deg);
+	-o-transform: rotateY(-180deg);
+	-ms-transform: rotateY(-180deg);
+}
 
-body{
-    position: relative;
+.editing textarea {
+	width: 100%;
+  	height: 8em;
+  	border: 1px solid #eee;
+}
+
+.editing button {
+	width: 50px;
+	margin-top: 5px;
 }
 
 .message{
@@ -57,8 +71,6 @@ body{
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
-    cursor: pointer;
-
     -webkit-transition: 0.8s;
     -moz-transition: 0.8s;
     -ms-transition: 0.8s;
