--- a/style.css
+++ b/style.css
@@ -50,13 +50,13 @@ a {
 	-ms-transform: rotateY(-180deg);
 }
 
-.editing textarea {
+.message textarea {
 	width: 100%;
   	height: 8em;
   	border: 1px solid #eee;
 }
 
-.editing button {
+.message button {
 	width: 50px;
 	margin-top: 5px;
 }
@@ -71,11 +71,11 @@ a {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
-    -webkit-transition: 0.8s;
-    -moz-transition: 0.8s;
-    -ms-transition: 0.8s;
-    -o-transition: 0.8s;
-    transition: 0.8s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+    transition: 0.6s;
 }
 
 .flip {
