--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 body {
 	font-size: 16px; 
-	font-family: 'Open Sans', sans-serif;
+	color: #555;
+	font-family: Roboto, sans-serif;
+	margin: 0;
 }
 
 h1 {
-	padding-left: 1.25em;
+	padding-left: 0.5em;
+}
+
+h2 {
+	padding-left: 1.7em;
+}
+
+h2 a {
+	margin-left: 10px;
 }
 
 .message-list {
@@ -36,6 +46,7 @@ h1 {
 a {
 	text-decoration: none;
 	cursor: pointer;
+	color: #00bcd4;
 }
 
 .message-body a {
@@ -52,13 +63,22 @@ a {
 
 .message textarea {
 	width: 100%;
-  	height: 8em;
+	font-size: 16px;
+  	height: 5.8em;
   	border: 1px solid #eee;
 }
 
 .message button {
 	width: 50px;
 	margin-top: 5px;
+}
+
+img {
+	width: 15px;
+}
+
+button {
+	cursor: pointer;
 }
 
 .message{
@@ -84,4 +104,24 @@ a {
   -moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
+}
+
+header {
+  background-color: #00bcd4;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  border-radius: 0px;
+  z-index: 5;
+  width: 100%;
+  display: -webkit-box;
+  display: flex;
+  min-height: 44px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+header h1 {
+	color: white;
 }
