--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ h1 {
 	padding-left: 0.5em;
 }
 
-h2 {
-	padding-left: 1.7em;
-}
-
 h2 a {
 	margin-left: 10px;
 }
@@ -23,29 +19,65 @@ h2 a {
 	vertical-align: top;
 }
 
+ul.column_1 li {
+	background: #4DB6AC;
+}
+
+ul.column_1 .votes {
+	background: #009688;
+}
+
+ul.column_2 li {
+	background: #e57373;
+}
+
+ul.column_2 .votes {
+	background: #ef5350;
+}
+
+ul.column_3 li {
+	background: #BA68C8;
+}
+
+ul.column_3 .votes {
+	background: #AB47BC;
+}
+
 .message {
 	display: block;
 	height: 8em;
-	margin-bottom: 0.7em;
-  	border: 1px solid #d6d6d6;
+	color: white;
+	margin-bottom: 1em;
+	border-radius: 2px;
+
+	-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	-moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .message-body {
 	height: 5.6em;
-	padding: 0.5em;
+	padding: 1em;
 }
 
 .votes {
 	display: block;
 	font-size: 0.9em;
 	text-align: right;
-	padding: 0.2em 0.5em;
-	background: #eee;
+	padding: 0.5em;
+	right: 0;
+	top: 98px;
+	position: absolute;
 }
 
 a {
 	text-decoration: none;
 	cursor: pointer;
+	color: white;
+	font-size: 1.2em;
+}
+
+h2 a {
 	color: #00bcd4;
 }
 
@@ -74,7 +106,7 @@ a {
 }
 
 img {
-	width: 15px;
+	width: 13px;
 }
 
 button {
@@ -99,11 +131,15 @@ button {
 }
 
 .flip {
-  transform: rotateY(180deg) scale(1.2,1.2);
-  -webkit-transform: rotateY(180deg) scale(1.2,1.2);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
+	transform: rotateY(180deg) scale(1.15,1.15);
+	-webkit-transform: rotateY(180deg) scale(1.15,1.15);
+	-moz-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	-ms-transform: rotateY(180deg);
+
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
+	-webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
+	-moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
 }
 
 header {
