--- a/style.css
+++ b/style.css
@@ -81,10 +81,32 @@ h2 a {
 	color: #00bcd4;
 }
 
-.message-body > a {
+.message-body a {
 	position: absolute;
 	right: 0.5em;
   	top: 0.5em;
+}
+
+button {
+	border: 10px;
+	box-sizing: border-box;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-appearance: button;
+	cursor: pointer;
+	position: relative;
+	height: 23px;
+	padding: 0px;
+	position: absolute;
+	bottom: 5px;
+	left: 5px;
+	overflow: hidden;
+	border-radius: 2px;
+	transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+	-webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+	transform: translate3d(0px, 0px, 0px);
+	text-decoration: none;
+	outline: none;
+	background: none rgb(255, 255, 255);
 }
 
 .editing {
@@ -96,9 +118,11 @@ h2 a {
 }
 
 .message textarea {
+	font-family: Roboto, sans-serif;
+	color: white;
 	width: 100%;
-	font-size: 16px;
-  	height: 5.8em;
+	font-size: 14px;
+  	height: 7.8em;
   	padding: 0.5em;
   	border: none;
   	resize: none;
@@ -146,6 +170,10 @@ button {
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
 	-webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
 	-moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
+}
+
+.flip .message-body {
+	padding: 0.6em;
 }
 
 header {
