--- a/message.css
+++ b/message.css
@@ -66,9 +66,15 @@ ul.column_3 .votes {
     transition: 0.6s;
     background: transparent;
     display: block;
-	height: 8em;
+	height: 128px;
+	width: 27%;
 	margin-bottom: 1em;
 	border-radius: 2px;
+	position: absolute;
+
+	-webkit-transition: top 0.5s ease-in-out;
+	-moz-transition: top 0.5s ease-in-out;
+	transition: top 0.5s ease-in-out;	
 }
 
 .message .front {
