--- a/base.css
+++ b/base.css
@@ -5,11 +5,6 @@ body {
 	margin: 0;
 }
 
-h1 {
-	margin: 0.4em 0;
-	padding-left: 0.5em;
-}
-
 h2 a {
 	margin-left: 10px;
 	color: #00bcd4;
@@ -59,33 +54,43 @@ header {
   padding-right: 24px;
 }
 
-header h1 {
-	color: white;
-}
-
 button {
 	border: 10px;
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-appearance: button;
 	cursor: pointer;
+	background: #006774;
+	color: white;
+	transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+	-webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+	transform: translate3d(0px, 0px, 0px);
+	text-decoration: none;
+	overflow: hidden;
+	margin-left: 10px;
+	padding: 4px 7px;
+	border-radius: 2px;
+}
+
+input {
+	background: white;
+	border: 1px solid #eee;
+	padding: 3px 5px;
+	width: 100px;
+	border-radius: 2px;
+}
+
+.message button {
 	position: relative;
 	height: 23px;
 	padding: 0px;
 	position: absolute;
 	bottom: 14px;
 	left: 14px;
-	overflow: hidden;
-	border-radius: 2px;
-	transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-	-webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-	transform: translate3d(0px, 0px, 0px);
-	text-decoration: none;
 	outline: none;
-	background: #00C853;
-	color: white;
 	width: 50px;
 	margin-top: 5px;
+	background: #00C853;
 }
 
 textarea {
