--- a/message.css
+++ b/message.css
@@ -31,6 +31,7 @@ ul.column_3 .votes {
 .text {
   white-space: pre; 
   word-break: break-word; 
+  white-space: normal;
   padding-right: 15px;
 }
 
