--- a/base.css
+++ b/base.css
@@ -10,6 +10,28 @@ h2 a {
 	color: #00bcd4;
 }
 
+ul {
+	padding-left: 0;
+}
+
+.controls {
+	font-size: 0.8em;
+	display: none;
+	margin: 0;
+}
+
+h2:hover .controls {
+	display: inline;
+}
+
+.delete {
+	color: #d32f2f;
+}
+
+.edit {
+	color: #00C853;
+}
+
 a {
 	text-decoration: none;
 	cursor: pointer;
@@ -17,7 +39,7 @@ a {
 	font-size: 1.2em;
 }
 
-a:hover {
+/*a:hover {
 	-webkit-transform: scale(1.3, 1.3);
 	-moz-transform: scale(1.3, 1.3);
 	-ms-transform: scale(1.3, 1.3);
@@ -28,7 +50,7 @@ a:hover {
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
-}
+}*/
 
 h2 {
 	margin-bottom: 0;
@@ -120,4 +142,9 @@ textarea {
   	border: none;
   	resize: none;
   	outline: none;
+}
+
+.ngdialog-content h1 {
+	margin: 0;
+	margin-bottom: 0.5em;
 }
