changes on editing column

--- a/base.css
+++ b/base.css
@@ -14,14 +14,37 @@ ul {
 	padding-left: 0;
 }
 
-.controls {
-	font-size: 0.8em;
-	display: none;
-	margin: 0;
+h2 {
+	cursor: pointer;
+	display: inline-block;
 }
 
-h2:hover .controls {
-	display: inline;
+.controls {
+	font-size: 0.9em;
+    margin: 0;
+    position: relative;
+    top: -2px;
+    left: -5px;
+}
+
+.success-button {
+	height: 24px;
+    padding: 0px;
+    outline: none;
+    width: 50px;
+    background: #00C853;
+    vertical-align: top;
+}
+
+.editing-column input {
+	color: #555;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.editing-column .blue {
+	font-size: 0.9em;
+    margin-left: 5px;
 }
 
 .delete {
