--- a/base.css
+++ b/base.css
@@ -29,6 +29,11 @@ h2 {
     left: -5px;
 }
 
+.container {
+	display: block;
+	margin-left: 1.5em;
+}
+
 .success-button {
 	height: 24px;
     padding: 0px;
@@ -101,8 +106,8 @@ header {
   display: -webkit-box;
   display: flex;
   min-height: 44px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 small {
