using flex-box for layout instead of inline-styles

--- a/css/message.css
+++ b/css/message.css
@@ -43,9 +43,7 @@ ul.column_5 .votes {
 }
 
 .message-list {
-	display: inline-block;
-  float: left;
-  vertical-align: top;
+  flex-grow: 1;
 }
 
 .text {
