--- a/css/base.css
+++ b/css/base.css
@@ -73,19 +73,6 @@ a {
 	font-size: 1.2em;
 }
 
-/*a:hover {
-	-webkit-transform: scale(1.3, 1.3);
-	-moz-transform: scale(1.3, 1.3);
-	-ms-transform: scale(1.3, 1.3);
-	-o-transform: scale(1.3, 1.3);
-	transform: scale(1.3, 1.3);
-	-webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-}*/
-
 h2 {
 	margin-bottom: 0;
 }
@@ -151,6 +138,11 @@ input {
 	padding: 3px 5px;
 	width: 100px;
 	border-radius: 2px;
+}
+
+input[type="text"] {
+	font-size: 18px;
+	width: 200px;
 }
 
 .message button {
