--- a/css/base.css
+++ b/css/base.css
@@ -30,8 +30,14 @@ h2 {
 }
 
 .container {
-	display: block;
-	margin-left: 1.5em;
+	width: 100%;
+	-ms-box-orient: horizontal;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: flex;
 }
 
 .success-button {
