--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,9 @@ body {
 	font-size: 1.5em;
 	font-weight: bold;
 	color: #00bcd4;
+	vertical-align: top;
+    margin-top: 17px;
+    display: inline-block;
 }
 
 ul {
@@ -19,6 +22,10 @@ ul {
 h2 {
 	cursor: pointer;
 	display: inline-block;
+	margin-bottom: 0;
+	display: inline-block;
+    max-width: 80%;
+    font-size: 1.4em;
 }
 
 .controls {
@@ -66,6 +73,9 @@ h2 {
 
 .delete {
 	color: #d32f2f;
+	vertical-align: top;
+    margin-top: 24px;
+    display: inline-block;
 }
 
 .edit {
@@ -77,10 +87,6 @@ a {
 	cursor: pointer;
 	color: white;
 	font-size: 1.2em;
-}
-
-h2 {
-	margin-bottom: 0;
 }
 
 img {
