--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,11 @@ body {
 	margin: 0;
 }
 
+iframe {
+	vertical-align: top;
+    margin-left: 10px;
+}
+
 .add {
 	margin-left: 10px;
 	font-size: 1.5em;
