--- a/css/base.css
+++ b/css/base.css
@@ -31,6 +31,8 @@ h2 {
 	display: inline-block;
     max-width: 80%;
     font-size: 1.4em;
+    min-width: 50px;
+    height: 30px;
 }
 
 .controls {
