--- a/css/spinner.css
+++ b/css/spinner.css
@@ -4,13 +4,23 @@
   font-size: 10px;
   position: fixed;
   top: 0;
-  background-color: #4DB6AC;
-  opacity: 0.7;
   height: 100%;
   width: 100%;
 }
 
-.spinner > div {
+.overlay {
+  padding: 200px 0;
+  text-align: center;
+  font-size: 10px;
+  position: fixed;
+  top: 0;
+  background-color: #333;
+  opacity: 0.5;
+  height: 100%;
+  width: 100%;
+}
+
+.spinner > .rect {
   background-color: black;
   height: 50px;
   width: 6px;
