Adding livereload and changing buttons style

--- a/css/base.css
+++ b/css/base.css
@@ -128,21 +128,26 @@ h1 {
 }
 
 button {
+	font-family: Roboto, sans-serif;
 	border: 10px;
 	box-sizing: border-box;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-webkit-appearance: button;
 	cursor: pointer;
-	background: #006774;
+	background: #028696;
 	color: white;
 	transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 	-webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 	transform: translate3d(0px, 0px, 0px);
-	text-decoration: none;
 	overflow: hidden;
 	margin-left: 10px;
-	padding: 4px 7px;
+	padding: 5px 8px;
 	border-radius: 2px;
+	border-bottom: 2px solid #016C79;
+}
+
+button:hover {
+	border-bottom: 0;
+	position: relative;
+	top: 2px;
 }
 
 button:disabled {
