--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,7 @@ body {
 iframe {
 	vertical-align: top;
     margin-left: 10px;
+    margin-top: 2px;
 }
 
 .add {
@@ -111,7 +112,7 @@ header {
   width: 100%;
   display: -webkit-box;
   display: flex;
-  min-height: 44px;
+  min-height: 47px;
   padding-left: 1.5em;
   padding-right: 1.5em;
 }
