--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,30 @@
-header { 
-	display: block;
-	color: white;
+header {
+  background-color: #00bcd4;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  border-radius: 0px;
+  z-index: 5;
+  width: 100%;
+  display: -webkit-box;
+  display: flex;
+  min-height: 47px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: block;
+  color: white;
 }
 
 header h1 {
 	float: left;
-	margin: 0.2em;
+	margin: 0;
 	margin-top: 0.4em;
     font-size: 1.7em;
 }
 
 header span {
 	float: right;
-	margin: 0.9em;
+	margin: 0.9em 0;
 	font-size: 0.9em;
 }
