Fixing button border

--- a/css/base.css
+++ b/css/base.css
@@ -140,3 +140,12 @@ textarea {
 	margin: 0;
 	margin-bottom: 0.5em;
 }
+
+.ngdialog-content {
+	width: 350px !important;
+}
+
+.ngdialog-content button {
+	vertical-align: top;
+	height: 29px;
+}
