--- a/css/message.css
+++ b/css/message.css
@@ -11,7 +11,7 @@ ul.column_2 .front, ul.column_2 .back {
 }
 
 ul.column_2 .votes {
-	background: #ef5350;
+	background: #E6403D;
 }
 
 ul.column_3 .front, ul.column_3 .back {
@@ -200,4 +200,8 @@ ul.column_6 .votes {
 
 .back a {
 	color: #EF5350;
+}
+
+.back a:hover {
+  color: #C33B38;
 }
