Fixing pencil size

--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,6 @@ iframe {
     display: inline-block;
     position: absolute;
     top: 65px;
-    font-size: 12px;
 }
 
 .add:hover {
@@ -98,6 +97,10 @@ h2 {
 
 .delete:hover {
 	color: #C33B38;
+}
+
+.pencil {
+	font-size: 13px;
 }
 
 .editing .fa-times {
