--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -50,48 +50,24 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
 }
 
 .message {
-  perspective: 500;
-  -webkit-perspective: 500;
-  -moz-perspective: 500;
-  -ms-perspective: 500;
-  -o-perspective: 500;
-  transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
+  @include transform-style(preserve-3d);
+  @include transition(top 0.3s ease-in-out);
+  @include perspective(500);
   background: transparent;
   display: block;
 	height: 110px;
 	margin-bottom: 15px;
 	border-radius: 2px;
-	-webkit-transition: top 0.3s ease-in-out;
-	-moz-transition: top 0.3s ease-in-out;
-	transition: top 0.3s ease-in-out;	
 }
 
 .message .front {
-  position: absolute;
-  top: 0;
-  left: 0;
+  @include transition(all .4s ease-in-out);
+  @include transform(rotateX(0deg) rotateY(0deg));
+  @include transform-style(preserve-3d);
+  @include backface-visibility(hidden);
+  @include position(absolute, 0 null null 0); 
+  @include size(100% 100%);
   z-index: 900;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: rotateX(0deg) rotateY(0deg);
-  -moz-transform: rotateX(0deg) rotateY(0deg);
-  transform: rotateX(0deg) rotateY(0deg);
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
   color: white;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -99,24 +75,15 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
 }
 
 .message .back {
-  position: absolute;
-  top: 0;
-  left: 0;
+  @include transform-style(preserve-3d);
+  @include transition(all .4s ease-in-out);
+  @include backface-visibility(hidden);
+  @include transform(rotateY(-180deg));
+  @include position(absolute, 0 null null 0); 
   z-index: 800;
   width: 100%;
   height: 100%;
   color: white;
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-179deg);
-  transform: rotateY(-179deg);
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
