--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -28,7 +28,6 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
 }
 
 .message-body {
-	height: 6.3em;
 	padding: 0.5em;
  
   a {
@@ -43,8 +42,16 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
   display: block;
 	font-size: 0.89em;
 	text-align: right;
-	padding: 0.5em;
+	padding: .3em .4em;
   height: 17px;
+}
+
+.placeholder {
+  visibility: hidden;
+  width: 100%;
+  white-space: pre-line; 
+  word-break: break-word; 
+  color: white;
 }
 
 .message {
@@ -53,9 +60,21 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
   @include perspective(500);
   background: transparent;
   display: block;
-	height: 110px;
-	margin-bottom: 15px;
+	height: auto;
+	margin-bottom: 29px;
 	border-radius: 2px;
+  padding-bottom: 20px;
+
+  textarea {
+    @include size(100% 100%);
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    padding: 0.2em 0.5em;
+    padding-bottom: 0;
+    border: none;
+    resize: none;
+    outline: none;
+  }
 }
 
 .message .front {
@@ -66,6 +85,7 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
   @include position(absolute, 0 null null 0); 
   @include size(100% 100%);
   z-index: 900;
+  padding-bottom: 1em;
   color: white;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -78,9 +98,9 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
   @include backface-visibility(hidden);
   @include transform(rotateY(-180deg));
   @include position(absolute, 0 null null 0); 
+  @include size(100% 100%);
   z-index: 800;
-  width: 100%;
-  height: 100%;
+  padding-bottom: 1em;
   color: white;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -125,6 +145,10 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
 
 .back a {
 	color: #EF5350;
+
+  &.save-link:hover {
+    color: #00923D;
+  }
 
   &:hover {
     color: #C33B38;
