--- a/stylesheets/_button.scss
+++ b/stylesheets/_button.scss
@@ -24,7 +24,14 @@ header button:hover {
 
 .ngdialog-content button {
 	vertical-align: top;
+	font-size: 1em;
 	height: 28px;
+}
+
+.ngdialog-content a {
+	color: #028696;
+	margin-left: 10px;
+	font-size: 1em;
 }
 
 .ngdialog-content button:hover, .editing-column button:hover {
