--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -122,6 +122,15 @@ h2 {
 	width: 12.8281px;
 }
 
+.fa-thumbs-o-down:hover:before {
+	content: '\f165';
+}
+
+.fa-thumbs-o-down:hover {
+	width: 12.8281px;
+}
+
+
 .fa-pencil:hover {
 	color: #333;
 	opacity: 0.5;
