--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -27,4 +27,59 @@ header {
     margin: 0.9em 0;
     font-size: 0.9em;
   }
+
+  label {
+    font-size: 14px;
+  }
+
+  .prime {
+    float: none;
+    font-size: 14px;
+    margin-right: 10px;
+
+    span {
+      opacity: 0;
+      position: absolute;
+      text-align: left;
+      padding: 10px 15px;
+      color: #f9f9f9;
+      z-index: 999;
+      word-wrap: break-word;
+      pointer-events: none;
+      margin-top: 30px;
+      margin-left: -222px;
+      font-size: 13px;
+      width: 300px;
+      height: 80px;
+      line-height: 1.3em;
+      background-color: #555;
+      border-radius: 4px;
+      text-shadow: none;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: -15px;
+        left: 162px;
+        margin-top: 0;
+        width: 0;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 8px solid #555;
+        border-top: 8px solid transparent;
+      }
+    }
+
+    &:hover {
+      span {
+        opacity: 1;
+      }
+    }
+
+    i {
+      color: #ffd700;
+      margin-right: 4px;
+    }
+  }
 }
