--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -95,6 +95,18 @@ h2 {
     top: 7px;
 }
 
+ul {
+	margin-top: 0;
+}
+
+#board-context {
+	height: 36px;
+    font-size: 16px;
+    color: #555;
+    border: none;
+    padding-left: 14px;
+}
+
 .delete {
 	color: #EF5350;
 	vertical-align: top;
