--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -246,3 +246,74 @@ blockquote {
 	user-select: none;
 	cursor: move;
 }
+
+.feature-notification {
+ 	width: 660px;
+    height: 530px;
+    position: fixed;
+    text-align: center;
+    top: 50px;
+    left: 22%;
+    background: white;
+    padding: 30px;
+    color: white;
+    font-size: 18px;
+
+    .feature {
+    	display: inline-block;
+    	width: 48%;
+    }
+ 
+    .title {
+    	font-size: 1.8em;
+	    font-weight: bold;
+	    color: #9A38AB;
+	    display: inline-block;
+    }
+
+    button {
+    	margin: 0 auto;
+	    display: block;
+	    width: 120px;
+	    font-size: 16px;
+	    height: 37px;
+	    margin-top: 25px;
+	    background: #ba68c8;
+	    border-bottom: 3px solid #93529e;
+	    text-transform: uppercase;
+    }
+
+    h3 {
+     	font-size: 1.2em;
+     	margin: 0;
+     	margin-bottom: 20px;
+     	color: #555;
+    }
+
+    .margin-top {
+    	margin-top: 20px;
+    }
+
+    img {
+     	width: 280px;
+     	border: 1px solid #ccc;
+    }
+ 
+    a {
+ 		text-decoration: underline;
+ 		color: #FFCF22;
+ 		font-size: 1.2em;
+    }
+ 
+    i {
+     	position: absolute;
+     	top: 5px;
+     	right: 5px;
+     	color: #555;
+     	cursor: pointer;
+    }
+ }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
