--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -67,7 +67,7 @@ $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
 
   textarea {
     @include size(100% 100%);
-    font-family: Roboto, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     padding: 0.3em 0.5em;
     padding-bottom: 0;
