--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -2,7 +2,7 @@
 @import 'base';
 @import 'select';
 @import 'button';
-@import 'font';
+@import 'icons';
 @import 'header';
 @import 'message';
 @import 'home';
