--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -1,317 +1,327 @@
+/* BEGIN Regular */
+@font-face {
+  font-family: 'Open Sans';
+  src: url("fonts/OpenSans-Regular.eot?v=1.1.0");
+  src: url("fonts/OpenSans-Regular.eot?#iefix&v=1.1.0") format("embedded-opentype"), url("fonts/OpenSans-Regular.woff?v=1.1.0") format("woff"), url("fonts/OpenSans-Regular.ttf?v=1.1.0") format("truetype"), url("fonts/OpenSans-Regular.svg?v=1.1.0#OpenSansBold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* END Regular */
+
 body {
-	font-size: 14px; 
-	color: #555;
-	font-family: Roboto, sans-serif;
-	margin: 0;
+  font-size: 14px;
+  color: #555;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
 }
 
 iframe {
-	vertical-align: top;
-    margin-left: 10px;
-    margin-top: 2px;
+  vertical-align: top;
+  margin-left: 10px;
+  margin-top: 2px;
 }
 
 .add {
-	margin-left: 10px;
-	font-weight: bold;
-	color: #00bcd4;
-	vertical-align: top;
-    margin-top: 17px;
-    display: inline-block;
+  margin-left: 10px;
+  font-weight: bold;
+  color: #00bcd4;
+  vertical-align: top;
+  margin-top: 17px;
+  display: inline-block;
 }
 
 .add:hover {
-	color: #0299AD;
+  color: #0299AD;
 }
 
 .add i {
-	font-size: 0.9em;
+  font-size: 0.9em;
 }
 
 ul {
-	padding-left: 0;
+  padding-left: 0;
 }
 
 h2 {
-	cursor: pointer;
-	display: inline-block;
-	margin-bottom: 0;
-    max-width: 85%;
-    font-size: 1.3em;
-    line-height: 1em;
-    min-width: 50px;
+  cursor: pointer;
+  display: inline-block;
+  margin-bottom: 0;
+  max-width: 85%;
+  font-size: 1.3em;
+  line-height: 1em;
+  min-width: 50px;
 }
 
 .controls {
-	font-size: 0.9em;
-    margin: 0;
-    position: relative;
-    top: -2px;
-    left: -5px;
+  font-size: 0.9em;
+  margin: 0;
+  position: relative;
+  top: -2px;
+  left: -5px;
 }
 
 .container {
-	width: 100%;
-	-ms-box-orient: horizontal;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -moz-flex;
-	display: -webkit-flex;
-	display: flex;
+  width: 100%;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
 }
 
 .success-button {
-	margin-top: 5px;
-	margin-left: 0;
-	height: 24px;
-    padding: 0px;
-    outline: none;
-    width: 50px;
-    background: #00C853;
-    vertical-align: top;
+  margin-top: 5px;
+  margin-left: 0;
+  height: 24px;
+  padding: 0px;
+  outline: none;
+  width: 50px;
+  background: #00C853;
+  vertical-align: top;
 }
 
 .column-header {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .editing-column {
-	margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .editing-column input {
-	color: #555;
-    font-weight: bold;
-    font-size: 1.3em;
-    max-width: 300px;
+  color: #555;
+  font-weight: bold;
+  font-size: 1.3em;
+  max-width: 300px;
 }
 
 .editing-column .blue {
-	font-size: 0.9em;
-    margin-left: 5px;
-    position: relative;
-    top: 7px;
+  font-size: 0.9em;
+  margin-left: 5px;
+  position: relative;
+  top: 7px;
 }
 
 ul {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 #board-context {
-	height: 36px;
-    font-size: 16px;
-    color: #555;
-    border: none;
-    padding-left: 14px;
-    outline: none;
+  height: 36px;
+  font-size: 16px;
+  color: #555;
+  border: none;
+  padding-left: 14px;
+  outline: none;
 }
 
 .delete {
-	color: #EF5350;
-	vertical-align: top;
-    margin-top: 19px;
-    display: inline-block;
+  color: #EF5350;
+  vertical-align: top;
+  margin-top: 19px;
+  display: inline-block;
 }
 
 .delete:hover {
-	color: #C33B38;
+  color: #C33B38;
 }
 
 .pencil {
-	font-size: 13px;
+  font-size: 13px;
 }
 
 .editing .fa-times {
-	font-size: 0.9em;
+  font-size: 0.9em;
 }
 
 .fa-thumbs-o-up:hover:before {
-	content: '\f164';
+  content: '\f164';
 }
 
 .fa-thumbs-o-up:hover {
-	width: 12.8281px;
+  width: 12.8281px;
 }
 
 .fa-thumbs-o-down:hover:before {
-	content: '\f165';
+  content: '\f165';
 }
 
 .fa-thumbs-o-down:hover {
-	width: 12.8281px;
+  width: 12.8281px;
 }
 
 
 .fa-pencil:hover {
-	color: #333;
-	opacity: 0.5;
+  color: #333;
+  opacity: 0.5;
 }
 
 .message-body a.delete-link {
-	top: 10px;
-	right: 10px;
-	font-size: 1em;
-	outline: none;
+  top: 10px;
+  right: 10px;
+  font-size: 1em;
+  outline: none;
 }
 
 .edit {
-	color: #00C853;
+  color: #00C853;
 }
 
 a {
-	text-decoration: none;
-	cursor: pointer;
-	color: white;
-	font-size: 1.2em;
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+  font-size: 1.2em;
 }
 
 img {
-	width: 13px;
+  width: 13px;
 }
 
 small {
-	color: #999;
-	margin-left: 1em;
-	font-size: .8em;
+  color: #999;
+  margin-left: 1em;
+  font-size: .8em;
 }
 
 h1 {
-	margin-left: 1.5em;
-	margin-top: 2em;
+  margin-left: 1.5em;
+  margin-top: 2em;
 }
 
 input {
-	background: white;
-	border: 1px solid #ddd;
-	border-radius: 2px;
-	padding: 3px 5px;
-	width: 100%;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  padding: 3px 5px;
+  width: 100%;
 }
 
 input[type="text"] {
-	font-size: 18px;
-	width: 200px;
+  font-size: 18px;
+  width: 200px;
 }
 
 .ngdialog-content h1 {
-	margin: 0;
-	margin-bottom: 0.5em;
+  margin: 0;
+  margin-bottom: 0.5em;
 }
 
 .ngdialog-content {
-	width: 350px !important;
+  width: 350px !important;
 }
 
 .delete-button {
-	margin-left: 0;
+  margin-left: 0;
 }
 
 blockquote {
-    font-family: 'PT Serif',serif;
+  font-family: 'PT Serif',serif;
+  font-style: italic;
+  margin: 0;
+
+  p {
+    position: relative;
+    margin: 0 auto;
+    padding: 5px 0;
     font-style: italic;
-    margin: 0;
+    font-size: 14px;
+    line-height: 20px;
+  }
 
-	p {
-	    position: relative;
-	    margin: 0 auto;
-	    padding: 5px 0;
-	    font-style: italic;
-	    font-size: 14px;
-	    line-height: 20px;
-	}
+  footer {
+    margin: 3px;
+    font-size: 13px;
+    line-height: 20px;
+    text-align: right;
 
-	footer {
-		margin: 3px;
-		font-size: 13px;
-		line-height: 20px;
-		text-align: right;
-    
-	    &:before {
-	      content: '\2014';
-	    }
-	}
+    &:before {
+      content: '\2014';
+    }
+  }
 }
 
 .message > div > .lvl-over {
-	@include transition(none);
-	outline: 2px dashed #777 !important;
+  @include transition(none);
+  outline: 2px dashed #777 !important;
 }
 
 [draggable] {
-	-moz-user-select: none;
-	-khtml-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
-	cursor: move;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: move;
 }
 
 .feature-notification {
- 	width: 660px;
-    height: 530px;
-    position: fixed;
-    text-align: center;
-    top: 50px;
-    left: 22%;
-    background: white;
-    padding: 30px;
-    color: white;
-    font-size: 18px;
+  width: 660px;
+  height: 530px;
+  position: fixed;
+  text-align: center;
+  top: 50px;
+  left: 22%;
+  background: white;
+  padding: 30px;
+  color: white;
+  font-size: 18px;
 
-    .feature {
-    	display: inline-block;
-    	width: 48%;
-    }
- 
-    .title {
-    	font-size: 1.8em;
-	    font-weight: bold;
-	    color: #9A38AB;
-	    display: inline-block;
-    }
+  .feature {
+    display: inline-block;
+    width: 48%;
+  }
 
-    button {
-    	margin: 0 auto;
-	    display: block;
-	    width: 120px;
-	    font-size: 16px;
-	    height: 37px;
-	    margin-top: 25px;
-	    background: #ba68c8;
-	    border-bottom: 3px solid #93529e;
-	    text-transform: uppercase;
-    }
+  .title {
+    font-size: 1.8em;
+    font-weight: bold;
+    color: #9A38AB;
+    display: inline-block;
+  }
 
-    h3 {
-     	font-size: 1.2em;
-     	margin: 0;
-     	margin-bottom: 20px;
-     	color: #555;
-    }
+  button {
+    margin: 0 auto;
+    display: block;
+    width: 120px;
+    font-size: 16px;
+    height: 37px;
+    margin-top: 25px;
+    background: #ba68c8;
+    border-bottom: 3px solid #93529e;
+    text-transform: uppercase;
+  }
 
-    .margin-top {
-    	margin-top: 20px;
-    }
+  h3 {
+    font-size: 1.2em;
+    margin: 0;
+    margin-bottom: 20px;
+    color: #555;
+  }
 
-    img {
-     	width: 280px;
-     	border: 1px solid #ccc;
-    }
- 
-    a {
- 		text-decoration: underline;
- 		color: #FFCF22;
- 		font-size: 1.2em;
-    }
- 
-    i {
-     	position: absolute;
-     	top: 5px;
-     	right: 5px;
-     	color: #555;
-     	cursor: pointer;
-    }
- }
+  .margin-top {
+    margin-top: 20px;
+  }
+
+  img {
+    width: 280px;
+    border: 1px solid #ccc;
+  }
+
+  a {
+    text-decoration: underline;
+    color: #FFCF22;
+    font-size: 1.2em;
+  }
+
+  i {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: #555;
+    cursor: pointer;
+  }
+}
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
