--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -1,94 +1,90 @@
-$darkest-gray: #333;
-$dark-gray: #8c8c8c;
-$lightest-gray: #d6d6d6;
-
 .home {
-	section {
-		text-align: center;
-		margin: 0;
-		padding: 60px;
-		font-size: 16px;
+  section {
+    text-align: center;
+    margin: 0;
+    padding: 60px;
+    font-size: 16px;
 
-		&.step {
-			padding: 80px;
-			color: white;
+    &.step {
+      padding: 80px;
+      color: white;
 
-			&:nth-child(3n + 1) {
-				background: #BA68C8;
-			}
+      &:nth-child(3n + 1) {
+        background: $purple;
+      }
 
-			&:nth-child(3n + 2) {
-				background: #4DB6AC;
-			}
+      &:nth-child(3n + 2) {
+        background: $light-teal;
+      }
 
-			&:nth-child(3n + 3) {
-				background: #e57373;
-			}
-		}
-	}
+      &:nth-child(3n + 3) {
+        background: $red;
+      }
+    }
+  }
 
-	h1 {
-		font-size: 3em;
-		margin-left: 0;
-		margin-top: 0;
+  h1 {
+    font-size: 3em;
+    margin-left: 0;
+    margin-top: 0;
 
-		img {
-			width: 35px;
-			margin-right: 15px;
-		}
-	}
+    img {
+      width: 35px;
+      margin-right: 15px;
+    }
+  }
 
-	p {
-	    width: 40%;
-	    margin: 0 auto;
-	    line-height: 1.8em;
-	    font-size: 18px;
-	    display: inline-block;
-	    vertical-align: top;
-	    margin-top: 30px;
-	    margin-left: 40px;
+  p {
+      width: 40%;
+      margin: 0 auto;
+      line-height: 1.8em;
+      font-size: 18px;
+      display: inline-block;
+      vertical-align: top;
+      margin-top: 30px;
+      margin-left: 40px;
 
-	    &.left {
-	    	margin-left: 0;
-	    	margin-right: 40px;
-	    }
-	}
+      &.left {
+        margin-left: 0;
+        margin-right: 40px;
+      }
+  }
 
-	img {
-		width: 400px;
-		display: inline-block;
-	}
+  img {
+    width: 400px;
+    display: inline-block;
+  }
 
-	button {
-		margin: 0 auto;
-		display: block;
-		width: 160px;
-	    font-size: 16px;
-	    height: 47px;
-	    margin-top: 60px;
-	    background: #BA68C8;
-	    border-bottom: 3px solid #93529E;
+  button {
+    margin: 0 auto;
+    display: block;
+    width: 160px;
+      font-size: 16px;
+      height: 47px;
+      margin-top: 60px;
+      background: $purple;
+      border-bottom: 3px solid $light-purple;
 
-	    &.alone {
-	    	margin: 0 auto;
-	    }
-	}
+      &.alone {
+        margin: 0 auto;
+      }
+  }
 
-	ul {
-		line-height: 1.4em;
-		display: inline-block;
-		list-style: none;
-		font-size: 16px;
-		margin-top: 20px;
-	}
+  ul {
+    line-height: 1.4em;
+    display: inline-block;
+    list-style: none;
+    font-size: 16px;
+    margin-top: 20px;
+  }
 
-	h2 {
-		font-size: 2.7em;
-		font-weight: 100;
-		margin-bottom: 1.5em;
-		margin-top: 0;
-		display: block;
-		margin-right: 0;
-		max-width: 100%;
-	}
+  h2 {
+    font-size: 2.7em;
+    font-weight: 100;
+    margin-bottom: 1.5em;
+    margin-top: 0;
+    display: block;
+    margin-right: 0;
+    max-width: 100%;
+  }
 }
