--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -10,7 +10,7 @@
 
 body {
   font-size: 14px;
-  color: #555;
+  color: $dark-gray;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
 }
@@ -24,14 +24,14 @@ iframe {
 .add {
   margin-left: 10px;
   font-weight: bold;
-  color: #00bcd4;
+  color: $teal;
   vertical-align: top;
   margin-top: 17px;
   display: inline-block;
 }
 
 .add:hover {
-  color: #0299AD;
+  color: $light-teal;
 }
 
 .add i {
@@ -78,7 +78,7 @@ h2 {
   padding: 0px;
   outline: none;
   width: 50px;
-  background: #00C853;
+  background: $green;
   vertical-align: top;
 }
 
@@ -91,7 +91,7 @@ h2 {
 }
 
 .editing-column input {
-  color: #555;
+  color: $dark-gray;
   font-weight: bold;
   font-size: 1.3em;
   max-width: 300px;
@@ -110,22 +110,23 @@ ul {
 
 #board-context {
   height: 36px;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  color: #555;
+  color: $dark-gray;
   border: none;
   padding-left: 14px;
   outline: none;
 }
 
 .delete {
-  color: #EF5350;
+  color: $red;
   vertical-align: top;
   margin-top: 19px;
   display: inline-block;
 }
 
 .delete:hover {
-  color: #C33B38;
+  color: $faded-red;
 }
 
 .pencil {
@@ -154,7 +155,7 @@ ul {
 
 
 .fa-pencil:hover {
-  color: #333;
+  color: $darkest-gray;
   opacity: 0.5;
 }
 
@@ -166,7 +167,7 @@ ul {
 }
 
 .edit {
-  color: #00C853;
+  color: $green;
 }
 
 a {
@@ -181,7 +182,7 @@ img {
 }
 
 small {
-  color: #999;
+  color: $lightest-gray;
   margin-left: 1em;
   font-size: .8em;
 }
@@ -193,7 +194,7 @@ h1 {
 
 input {
   background: white;
-  border: 1px solid #ddd;
+  border: 1px solid $lightest-gray;
   border-radius: 2px;
   padding: 3px 5px;
   width: 100%;
@@ -245,7 +246,7 @@ blockquote {
 
 .message > div > .lvl-over {
   @include transition(none);
-  outline: 2px dashed #777 !important;
+  outline: 2px dashed $lightest-gray !important;
 }
 
 [draggable] {
@@ -276,7 +277,7 @@ blockquote {
   .title {
     font-size: 1.8em;
     font-weight: bold;
-    color: #9A38AB;
+    color: $light-purple;
     display: inline-block;
   }
 
@@ -287,8 +288,8 @@ blockquote {
     font-size: 16px;
     height: 37px;
     margin-top: 25px;
-    background: #ba68c8;
-    border-bottom: 3px solid #93529e;
+    background: $purple;
+    border-bottom: 3px solid $light-purple;
     text-transform: uppercase;
   }
 
@@ -296,7 +297,7 @@ blockquote {
     font-size: 1.2em;
     margin: 0;
     margin-bottom: 20px;
-    color: #555;
+    color: $dark-gray;
   }
 
   .margin-top {
@@ -305,12 +306,12 @@ blockquote {
 
   img {
     width: 280px;
-    border: 1px solid #ccc;
+    border: 1px solid $lightest-gray;
   }
 
   a {
     text-decoration: underline;
-    color: #FFCF22;
+    color: $yellow;
     font-size: 1.2em;
   }
 
@@ -318,7 +319,7 @@ blockquote {
     position: absolute;
     top: 5px;
     right: 5px;
-    color: #555;
+    color: $dark-gray;
     cursor: pointer;
   }
 }
