--- a/stylesheets/_spinner.scss
+++ b/stylesheets/_spinner.scss
@@ -14,14 +14,14 @@
   font-size: 10px;
   position: fixed;
   top: 0;
-  background-color: #666;
+  background-color: $dark-gray;
   opacity: 0.7;
   height: 100%;
   width: 100%;
 }
 
 .spinner > .rect {
-  background-color: #555;
+  background-color: $dark-gray;
   height: 50px;
   width: 6px;
   display: inline-block;
