Change to robot because open sans is breaking the layout

--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -65,7 +65,7 @@
 
   textarea {
     @include size(100% 100%);
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     padding: 0.3em 0.5em;
     padding-bottom: 0;
