--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -1,17 +1,28 @@
 /* BEGIN Regular */
 @font-face {
-  font-family: 'Open Sans';
-  src: url("fonts/OpenSans-Regular.eot?v=1.1.0");
-  src: url("fonts/OpenSans-Regular.eot?#iefix&v=1.1.0") format("embedded-opentype"), url("fonts/OpenSans-Regular.woff?v=1.1.0") format("woff"), url("fonts/OpenSans-Regular.ttf?v=1.1.0") format("truetype"), url("fonts/OpenSans-Regular.svg?v=1.1.0#OpenSansBold") format("svg");
+  font-family: 'Roboto';
+  src: url("fonts/Roboto-Regular.eot?v=0.4.2");
+  src: url("fonts/Roboto-Regular.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("fonts/Roboto-Regular.woff?v=0.4.2") format("woff"), url("fonts/Roboto-Regular.ttf?v=0.4.2") format("truetype"), url("fonts/Roboto-Regular.svg?v=0.4.2") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 /* END Regular */
 
+/* BEGIN Bold */
+@font-face {
+  font-family: 'RobotoBold';
+  src: url("fonts/Roboto-Bold.eot?v=0.4.2");
+  src: url("fonts/Roboto-Bold.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("fonts/Roboto-Bold.woff?v=0.4.2") format("woff"), url("fonts/Roboto-Bold.ttf?v=0.4.2") format("truetype"), url("fonts/Roboto-Bold.svg?v=0.4.2") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* END Bold */
+
+
 body {
   font-size: 14px;
-  color: $dark-gray;
-  font-family: 'Open Sans', sans-serif;
+  color: $grey;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
 }
 
@@ -50,6 +61,7 @@ h2 {
   font-size: 1.3em;
   line-height: 1em;
   min-width: 50px;
+  font-family: "RobotoBold";
 }
 
 .controls {
@@ -110,9 +122,9 @@ ul {
 
 #board-context {
   height: 36px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  color: $dark-gray;
+  color: $grey;
   border: none;
   padding-left: 14px;
   outline: none;
