--- a/stylesheets/_button.scss
+++ b/stylesheets/_button.scss
@@ -1,5 +1,5 @@
 button {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   border: 0px;
   cursor: pointer;
   background: $light-teal;
