--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -19,7 +19,9 @@ header {
     float: left;
     margin: 0;
     margin-top: 0.45em;
-    font-size: 1.7em;
+    font-size: 1.82em;
+    line-height: 1em;
+    font-family: "RobotoBold";
   }
 
   span {
