--- a/stylesheets/_colors.scss
+++ b/stylesheets/_colors.scss
@@ -2,6 +2,7 @@ $column-colors-main: #4DB6AC, #e57373, #BA68C8, #64B5F6, #FFCA28, #FFA000;
 $column-colors-votes: #009688, #E6403D, #AB47BC, #039BE5, #FFB300, #F57C00;
 
 $grey: #555;
+$light-grey: #777;
 $darkest-gray: #333;
 $dark-gray: #8C8C8C;
 $lightest-gray: #D6D6D6;
