--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -410,7 +410,9 @@ blockquote {
   @media (max-width: 500px) {
     display: flex;
     padding: 0 15px;
+    padding-bottom: 10px;
     align-items: center;
+    border-bottom: 1px solid #eee;
   }
 
   select {
