Improve mobile logic

--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -7,7 +7,7 @@
   <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
 </div>
 <span class="container">
-    <span ng-show="boardId !== '' && shouldShowColumn(type.id)" class="message-list" ng-repeat="type in board.columns">
+    <span ng-show="boardId !== ''" class="message-list" ng-class="{'selected': isColumnSelected(type.id)}" ng-repeat="type in board.columns">
         <ul class="column column_{{ type.id }}">
           <div class="column-header">
             <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="utils.openDialogDeleteColumn(this)"><i class="fa fa-times"></i></a>
