--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -3,13 +3,13 @@
   <p>Are you sure you want to delete all cards?</p>
   <p>Once you delete all cards, there is no going back. Please be certain.</p>
   <button class="delete-button" ng-click="deleteCards()">Delete</button>
-  <a ng-click="utils.closeAll()">Cancel</a>
+  <a ng-click="closeAllModals()">Cancel</a>
 </script>
 <script type="text/ng-template" id="copyBoard">
   <h1>Export Board</h1>
   <p>Select cards text with mouse and copy it</p>
   <p class="copy-text" ng-bind-html="getBoardText()"></p>
-  <button ng-click="utils.closeAll()">Close</button>
+  <button ng-click="closeAllModals()">Close</button>
 </script>
 <script type="text/ng-template" id="addNewColumn">
   <h1>New column</h1>
@@ -26,17 +26,17 @@
   <h1>Delete note</h1>
   <p>Are you sure you want to delete this note?</strong></p>
   <button class="delete-button" ng-click="deleteMessage(message)">Delete</button>
-  <a ng-click="utils.closeAll()">Cancel</a>
+  <a ng-click="closeAllModals()">Cancel</a>
 </script>
 <script type="text/ng-template" id="deleteColumn">
   <h1>Delete column</h1>
   <p>Are you sure you want to delete this column?</strong></p>
   <button class="delete-button" ng-click="deleteLastColumn()">Delete</button>
-  <a ng-click="utils.closeAll()">Cancel</a>
+  <a ng-click="closeAllModals()">Cancel</a>
 </script>
 <script type="text/ng-template" id="mergeCards">
   <h1>Merge cards</h1>
   <p>Are you sure you want to merge these two cards?</strong></p>
   <button ng-controller="MessageCtrl" class="delete-button" ng-click="dropped(dragEl, dropEl)">Merge</button>
-  <a ng-click="utils.closeAll()">Cancel</a>
+  <a ng-click="closeAllModals()">Cancel</a>
 </script>
